@@ -198,10 +198,22 @@ chunked_input_eof(void *ctx)
         istream_deinit_eof(&chunked->output);
 }
 
+static void
+chunked_input_abort(void *ctx)
+{
+    struct istream_chunked *chunked = ctx;
+
+    assert(chunked->input != NULL);
+
+    chunked->input = NULL;
+
+    istream_deinit_abort(&chunked->output);
+}
+
 static const struct istream_handler chunked_input_handler = {
     .data = chunked_input_data,
     .eof = chunked_input_eof,
-    .abort = istream_forward_abort,
+    .abort = chunked_input_abort,
 };
 
 
